--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -355,7 +355,7 @@
                     <div class="col-lg-2 ">
                         <div class="panel-group place" id="category_collapse">
                             <div class="panel dark" onclick="fridgeApp.refreshView()">
-                                <a data-toggle="collapse" data-parent="#category_collapse" href="#collapseAll">
+                                <a class="white" data-toggle="collapse" data-parent="#category_collapse" href="#collapseAll">
                                     Categories
                                 </a>
                             </div>
