adds item to currentUser nest

--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -211,8 +211,7 @@
 													
 												</tbody>	
 											</table>
-                                            <div id="addToNest"></div>
-                                            
+                                            <div id="addToNest"></div>                                            
 										</p>
 								  	</div>
 								</div>							
@@ -670,7 +669,7 @@
                 <table class="table table-default panel panel-warning col-xs-4 col-s-4" >
                 	<tbody class="color2">
 						<tr>
-							<td width='10%'>	
+							<td id ="form_table" width='10%'>	
 								<form id="myForm" action="/uploadItem" method="POST" enctype="multipart/form-data">
 									<div>
 										<label>Main Category</label>
