--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -23,7 +23,7 @@
     <script src="js/annyang.js"></script>
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container">
         <div class="row-fluid">
             <img class="changeImage left" src="cartoon_owl.png" alt="owl" width="50" height="42" onclick="fridgeApp.showView('home')">
             <div>Speech recognition state: <span class="myStateText myErrorText">Not Started Yet</span></div>
@@ -315,7 +315,7 @@
         </div>
 <!-- HomePage -->
     <div id="home-view" class="view">
-        <div class="container-fluid">           
+        <div class="container">           
             <div class="page-header">
                 <h1 class="heading_text">HOME</h1>
             </div>
@@ -331,7 +331,7 @@
                 </div>
             </div>
 
-                </div>
+                
             <div class="row-fluid">
                     <div class="col-lg-2 ">
                         <div class="panel-group place" id="category_collapse">
@@ -551,7 +551,6 @@
             </div>
         </div>
     </div>
-</div>
 
         <div id="profile-view" class="view">
         	<div class="container"> 
@@ -677,7 +676,7 @@
 							<td>
 									<div>
 										<label>Item Name</label>
-										<input type="text" class="form-control" id="itemName" name="itemName"/>
+                                        <input type="text" onmouseout="fridgeApp.setSeller()" class="form-control" id="itemName" name="itemName" />
 									</div>
 									<div>
 										<label>Price</label>
@@ -720,7 +719,7 @@
 										<input type="hidden" id="itemSeller" name="itemSeller"/>
 									</div>
 									<div class="place_right">
-										<input type="submit" class="dark_brown"  onclick="fridgeApp.reloadModel()"/>
+										<input type="submit" class="dark_brown" onclick="fridgeApp.reloadModel()"/>
 									</div>
 								</form>
 							</td>
@@ -850,8 +849,7 @@
         </div>
     </div>
 </body>
-<script>
-	$("#itemSeller").val(fridgeApp.getUser()); 		
+<script>	
     // this is the code that actually starts the JavaScript application!!
     // when the document has been fully loaded, all the fridgeApp.start() method
     $(document).ready(fridgeApp.start());
