--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -599,7 +599,7 @@
                             </button>
                             <ul class="dropdown-menu pull-right">
                                 <li><a href="#" onclick="fridgeApp.refreshNestTable()">Interested In</a></li>
-                                <li><a href="#" onclick="fridgeApp.refreshSellingTable()">Selling</a></li>
+                                <li><a href="#" onclick="fridgeApp.updateSellingList(), fridgeApp.refreshSellingTable()">Selling</a></li>
                                 <li class="divider"></li>
                                 <li><a href="#">Your History</a></li>
                             </ul>
