Message Box appears when 'Add to Nest' is clicked

--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -197,7 +197,8 @@
 													
 												</tbody>	
 											</table>
-                                            <div id="addToNest"></div>                                            
+                                            <div id="addToNest"></div>                          
+                                            <div id="messageUser"></div>
 										</p>
 								  	</div>
 								</div>							
