--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title>FridgeBay</title>
@@ -859,6 +859,7 @@
 	$("#itemSeller").val(fridgeApp.getUser()); 		
     // this is the code that actually starts the JavaScript application!!
     // when the document has been fully loaded, all the fridgeApp.start() method
-    $(document).ready(fridgeApp.start());
+    $(document).ready(fridgeApp.start(), fridgeSpeech.enableSpeech());
+    
 </script>
 </html>
