removed white border of navigation header

--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <title>FridgeBay</title>
@@ -29,7 +29,7 @@
             <img class="changeImage left" src="cartoon_owl.png" alt="owl" width="50" height="42" onclick="fridgeApp.showView('home')">
             <div>Speech recognition state: <span class="myStateText myErrorText">Not Started Yet</span></div>
             <button class="myStartButton btn btn-primary btn-sm"><span class="glyphicon glyphicon-bullhorn"></span> Start Speech</button>
-            <nav class="navbar navbar-default pull-right" role="navigation">
+            <nav class="pull-right" role="navigation">
                 <div class="container-fluid color7">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav">
