stylistic changes on home page

--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -537,13 +537,13 @@
                 </div>
 
             <div  class="col-lg-10" > 
-                <div class="text-center">
+                <div class="place text-center">
                     <p class="ollie"><img  src="cartoon_owl.png" alt="owl" width="45" height="37">llie's nest</p>
                 </div>
                 <div>
                     <center><img id="nestImage"  src="nest1.png" alt="owl" width="200" height="100"><h2 id="showNumber" class="text-center"></h2></center>
                 </div>
-                <div class="row" id="homeTableBody">
+                <div class="place_2 row" id="homeTableBody">
                     
                 </div>
                 <div class="border_circle pull-left">
