add to nest speech command

--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -52,25 +52,30 @@
             </nav>
         </div>
         <div class="row">
-			<div id="speechInstructions" class="alert alert-warning hidden alert-dismissable">
+     <!--   	<div id="speechInstructions" class="alert alert-warning hidden alert-dismissable">   -->
+			<div id="speechInstructions" class="alert alert-warning alert-dismissable">
 				<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-				<h4>Ollie's KEY COMMANDS</h4>
-				<ol>
-					<li>The '*' stands for a variable</li>
-					<li>The '/' stands for or</li>
-					<li>The '()' stands for a optional choice</li>
-					<li>show/hide speech instructions</li>
-					<li>go to * page</li>
-					<li>browse/browsing/look at/go over items (with information read)</li>
-					<li>sort/search by name/university/price/category/sub-category *</li>
-					<li>clear name/university/price/category filter</li>
-					<li>all category</li>			
-					<li>stop browsing</li>
-					<li>continue/resume browsing</li>
-					<li>end browsing</li>
-					<li>next/previous item</li>
-					<li>view/open/click item</li>
-				</ol>
+				<h3>Ollie's SPEECH INSTRUCTIONS</h3>
+				<ul>
+					<li>
+						<h4>Filter instructions</h4>
+						<ol>
+							<li>------</li>
+						</ol>
+					</li>
+					<li>
+						<h4>Browsing instructions</h4>
+						<ol>
+							<li>------</li>
+						</ol>
+					</li>
+					<li>
+						<h4></h4>
+						<ol>
+							<li>------</li>
+						</ol>
+					</li>
+				</ul>
 			</div>
 		</div>
 		<div class="row">
