Navbar icon appears when screen is small

--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -29,23 +29,23 @@
             <img class="changeImage left" src="cartoon_owl.png" alt="owl" width="50" height="42" onclick="fridgeApp.showView('home')">
             <div>Speech recognition state: <span class="myStateText myErrorText">Not Started Yet</span></div>
             <button class="myStartButton btn btn-primary btn-sm"><span class="glyphicon glyphicon-play"></span></button>
-            <nav class="pull-right" role="navigation">
+            <nav class="navbar-default pull-right color7" role="navigation">
                 <div class="container-fluid color7">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
+                    <div class="navbar-header color7">
+                        <button type="button" class="navbar-toggle color7" data-toggle="collapse" data-target="#nav">
+                            <span class="sr-only color7">Toggle navigation</span>
+                            <span class="icon-bar color7"></span>
+                            <span class="icon-bar color7"></span>
+                            <span class="icon-bar color7"></span>
                         </button>
                     </div>
-                    <div class="collapse navbar-collapse pull-right color7" id="nav">
+                    <div class="collapse navbar-collapse navbar-right color7" id="nav">
                         <ul class="nav navbar-nav color7">
                             <li><button class="dark_brown" onclick="fridgeApp.showHelp()"><span class="glyphicon glyphicon-info-sign"></span></button></li>
-                            <li id="notificationButton"></li>
-                            <li id="postButton"></li>
-                            <li id="profileButton"></li>
-                            <li id="loginButton"><button class="dark_brown" onclick="fridgeApp.accessLogoutPage()">Logout</button></li>
+                            <li id="notificationButton" class="color7"></li>
+                            <li id="postButton" class="color7"></li>
+                            <li id="profileButton" class="color7"></li>
+                            <li id="loginButton" class="color7"><button class="dark_brown" onclick="fridgeApp.accessLogoutPage()">Logout</button></li>
                         </ul>
                     </div>
                 </div>
