fixed unstyled lists

--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -396,7 +396,7 @@
                                                     </h4>
                                                 </div>
                                                 <div id="collapseAppliances" class="panel-collapse collapse color7">
-                                                        <ul class="panel-body list-unstlyed">
+                                                        <ul class="panel-body list-unstyled">
                                                                 <li onclick="fridgeApp.filterSubCategory('fridge')"><span class="color4"> Fridge</span></li>
                                                                 <li onclick="fridgeApp.filterSubCategory('microwave')"><span class="color4"> Microwave</span></li>
                                                                 <li onclick="fridgeApp.filterSubCategory('coffee_maker')"><span class="color4"> Coffee Maker</span></li>
@@ -477,7 +477,7 @@
                                                 </h4>
                                         </div>
                                         <div id="collapseSupplies" class="panel-collapse collapse color7">
-                                                <ul class="panel-body list-unstled">
+                                                <ul class="panel-body list-unstyled">
                                                         <li onclick="fridgeApp.filterSubCategory('scissors')"><span class="color4"> Scissors</span></li>
                                                         <li onclick="fridgeApp.filterSubCategory('pen_pencil')"><span class="color4"> Pen/Pencil</span></li>
                                                         <li onclick="fridgeApp.filterSubCategory('notebook')"><span class="color4"> Notebook</span></li>
@@ -498,7 +498,7 @@
                                                 </h4>
                                         </div>
                                         <div id="collapseBooks" class="panel-collapse collapse color7">
-                                                <ul class="panel-body list-unstlyed">
+                                                <ul class="panel-body list-unstyled">
                                                         <li onclick="fridgeApp.filterSubCategory('sciences')"><span class="color4"> Sciences</span></li>
                                                         <li onclick="fridgeApp.filterSubCategory('arts')"><span class="color4"> Arts</span></li>
                                                         <li onclick="fridgeApp.filterSubCategory('math')"><span class="color4"> Math</span></li>
@@ -539,7 +539,7 @@
                                         </h4>
                                 </div>
                                     <div id="collapseBed" class="panel-collapse collapse color7">
-                                            <ul class="panel-body list-unstlyed">
+                                            <ul class="panel-body list-unstyled">
                                                     <li onclick="fridgeApp.filterSubCategory('sheet')"><span class="color4"> Sheet</span></li>
                                                     <li onclick="fridgeApp.filterSubCategory('pillow_case')"><span class="color4"> Pillow Case</span></li>
                                                     <li onclick="fridgeApp.filterSubCategory('padding')"><span class="color4"> Padding</span></li>
