--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="collapse navbar-collapse navbar-right color7" id="nav">
                         <ul class="nav navbar-nav color7">
-                            <li><button class="dark_brown" onclick="fridgeApp.showHelp()"><span class="glyphicon glyphicon-info-sign"></span></button></li>
+                            <li><button class="dark_brown" onclick="fridgeApp.showView('about')"><span class="glyphicon glyphicon-info-sign"></span></button></li>
                             <li id="notificationButton" class="color7"></li>
                             <li id="postButton" class="color7"></li>
                             <li id="profileButton" class="color7"></li>
@@ -748,6 +748,30 @@
                             </div>
             </div>
         </div>
+<!--About Page -->
+    <div id="about-view" class="view">
+        <div class="container">
+            <div class="page-header">
+                <h1 class="heading_text">Editing Item</h1>
+            </div>
+            <div class="panel panel-warning">
+                <ul class="panel-body">
+                    <li>FridgeBay is a simple interface on which students can sell and buy items from one another</li>
+                    <li>You can set up an account with one click of the login button which will register you with your google account</li>
+                    <li>Once you've set up an account, you can post an item that you want to sell by clicking the + icon</li>
+                    <li>You will also have a profile page which contains some information passed through your google account</li>
+                    <li>In addition, your profile page will contain a "nest" which tracks the items you are interested in and those you are selling</li>
+                    <li>The home page contains all of the items on sale (within Ollie's nest)</li>
+                    <li>To view an item, you click on it. This takes you to a page which displays more information about the item</li>
+                    <li>From this page you can add an item to your nest of items you are interested in by clicking "add to nest"</li>
+                    <li>When you click "add to nest" a box will pop up from which you can message the seller of the item and set up a rendezvous</li>
+                    <li>The buyer and the seller can communicate via this messaging system</li>
+                    <li>Enjoy surfing FridgeBay!</li>
+                </ul>
+            </div> 
+        </div>
+    </div>
+
 <!--Edit Item Page -->
         <div id="edit-view" class="view">
             <div class="container">
