--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -760,7 +760,7 @@ end of login view-->
             <div class="page-header">
                 <h1 class="heading_text">About</h1>
             </div>
-            <div class="panel panel-warning color7">
+            <div>
                 <ul id ="about-list"class="panel-body color7">
                     <li><label><em>FridgeBay is a simple interface on which students can sell and buy items from one another</em></label></li>
                     <br>
