--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -94,7 +94,7 @@
 			<div id="unsupported" class="alert alert-warning hidden alert-dismissable">
 				<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
 				<h4>It looks like your browser doesn't support speech recognition.</h4>
-				<p>annyang plays nicely with all browsers, progressively enhancing modern browsers that support the SpeechRecognition standard, while leaving users with older browsers unaffected.</p>
+				<p>Our speech recognition plays nicely with all browsers, progressively enhancing modern browsers that support the SpeechRecognition standard, while leaving users with older browsers unaffected.</p>
 				<p>Please visit this url in a desktop browser like Chrome.</p>
 			</div>
 		</div>
