--- a/fridgebay_html/public/index.html
+++ b/fridgebay_html/public/index.html
@@ -71,13 +71,14 @@
 						<ol>
 							<li>filter/search/sort by name/university/price/category</li>
 							<li>clear name/university/price/category</li>
-							<li>browse items or browse a category (with information)</li>
+							<li>browse either items or a category (with information)</li>
+							<li>start browsing either items or a category (with information)</li>
 							<li>click show all items checkbox</li>
-							<li>stop browsing</li>
-							<li>continue browsing</li>
-							<li>next item</li>
-							<li>previous item</li>
-							<li>open/view/click item</li>
+							<li>stop (browsing)</li>
+							<li>continue/resume (browsing)</li>
+							<li>next (item)</li>
+							<li>previous (item)</li>
+							<li>open/view/click (item)</li>
 							<li>end browsing</li>
 						</ol>
 					</li>
